fix link icon alignment

--- a/packages/assets/scss/01-atoms/_decorative-link.scss
+++ b/packages/assets/scss/01-atoms/_decorative-link.scss
@@ -7,7 +7,7 @@
   width: 100%;
 
   svg {
-    padding-top: 1px;
+    margin-bottom: -0.1em;
   }
 
   a:hover {
