--- a/packages/assets/scss/02-molecules/_callout-link.scss
+++ b/packages/assets/scss/02-molecules/_callout-link.scss
@@ -49,7 +49,10 @@
   &__text {
 
     @include ma-link-underline;
-    align-items: center;
+
+    svg {
+      margin-bottom: -0.1em;
+    }
   }
 
   &__description {
